updated keep in touch box with new design. Fixed lower carousel on mobile

--- a/new-theme/codeitforward-fraserriverkeeper-55b4015eebad647b23000001/theme.scss
+++ b/new-theme/codeitforward-fraserriverkeeper-55b4015eebad647b23000001/theme.scss
@@ -619,10 +619,34 @@ h6.subhead {
 	}
 }
 
+input.text.user-error
+{
+	height: 40px;
+	width: 320px;
+}
+
+.btn-warning
+{
+	position: relative;
+  right: 8px;
+  top: -2px;
+	background-color: #facd45;
+	border-color: #facd45;
+	border-radius: 11px;
+	-moz-box-shadow: 2px 2px 2px 1px #64646c;
+  -webkit-box-shadow:2px 2px 2px 1px #64646c;
+  box-shadow: 2px 2px 2px 1px #64646c;
+	color: black;
+	height: 46px;
+	width: 142px;
+}
+
 .sign-up-container
 {
 	background-color: #69c0ec;
-	padding: 20px;
+	margin-left: 20px;
+	margin-right: 17px;
+	padding: 20px 20px 20px 33px;
 
 	form
 	{
@@ -650,6 +674,39 @@ h6.subhead {
 	margin-top: 20px;
 }
 
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+	.sign-up-container
+	{
+		margin-right: 2px;
+	}
+
+	.btn-warning
+	{
+		right: -1px;
+		top: 4px;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+	.sign-up-container {
+    background-color: #69c0ec;
+    margin-left: 20px;
+    margin-right: 3px;
+    padding: 20px 20px 20px 33px;
+	}
+
+	input.text.user-error {
+    height: 40px;
+    width: 238px;
+	}
+
+	.btn-warning
+	{
+		right: -1px;
+		top: 4px;
+	}
+}
+
 @media (max-width: 767px) {
 	.main
 	{
@@ -668,6 +725,11 @@ h6.subhead {
 	{
 		min-width: 184px;
 		padding: 25px;
+	}
+
+	.supporter-carousel img
+	{
+		width: 100%;
 	}
 
   .footer-items
@@ -713,5 +775,50 @@ h6.subhead {
 	.footer-left
 	{
 		margin-left: 0;
+	}
+}
+
+@media screen and (min-width: 614px) and (max-width: 767px)
+{
+	.sign-up-container {
+		background-color: #69c0ec;
+		margin-left: 20px;
+		margin-right: 2px;
+		padding: 20px 20px 20px 20px;
+		text-align: left;
+	}
+
+	input.text.user-error {
+		height: 40px;
+		width: 57vw;
+}
+
+	.btn-warning
+	{
+		right: 11px;
+		top: -1px;
+	}
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 613px)
+{
+	.sign-up-container {
+		background-color: #69c0ec;
+		margin-left: 20px;
+		margin-right: 2px;
+		padding: 20px 20px 20px 20px;
+		text-align: left;
+	}
+
+	input.text.user-error {
+		height: 40px;
+		width: 57vw;
+}
+
+	.btn-warning
+	{
+		right: 0;
+		top: 7px;
 	}
 }
